--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Windsor Open Data</title>
-        <link rel="icon" href = "Windsor_Icon.png">
+        <link rel="icon" href = "{{ site.url }}/assests/images/Windsor_Icon.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ site.url }}/assests/css/styles.css">
         <script src = "{{ site.url }}/assests/js/searchBar.js" type = "text/javascript"></script>
